Exercise from Single responsability principle and open closed principle cards